# bus-delay-modeling

./: .final_data.csv.icloud  .gitignore  README.md  __init__.py  dataloadingcleaning.Rmd  dataloadingcleaning.html  exploratory-data-viz.Rmd  pyproject.toml  requirements.txt  route-level-predictors.Rmd  s3_download  sea-gtfs-proj.Rproj  stop-level-predictors.Rmd  thesis-draft-1.Rmd  thesis-draft-1.tex  thesis-draft.Rmd
Data Prep Scripts/: route-level-predictors.Rmd  stop-level-predictors.Rmd
Data Prep Scripts/Old scripts/: route-stop-segments.Rmd
Old R scripts/: hierarchicalBART-modeling.Rmd  segmenting.Rmd  spatial-predictors.Rmd
cloud-scripts/: Extract.R  Train.R  dockerfile.txt
cloud-scripts/partial-pooling/: Dockerfile  Train.R
cloud-scripts/stan4bart/: .test_data.csv.icloud  Dockerfile  Train.R
cloud-scripts/vanilla-bart/: .train_data.csv.icloud  Dockerfile  Train.R
data-setup-scripts/: analysis-script.Rmd  bart-analysis-script.Rmd  data-management-script.Rmd  exploratory-data-viz.Rmd  route-level-predictors.Rmd  stop-level-predictors.Rmd  vanillabart-analysis-script.Rmd
predictor_tables/: route_pred_std.csv  route_predictors  route_predictors.csv
python code/: gtfs-realtime-pull.py  json_to_db  schedule-to-db  testpostgresql.py
python-scripts/: json_to_db
