[project]
name = "sea-gtfs-proj"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "peter-silverstein", email = "pesilver13@gmail.com" }
]
dependencies = [
    "gtfs-realtime-bindings>=1.0.0",
    "requests>=2.32.3",
    "datetime>=5.5",
    "pytz>=2024.2",
    "psycopg2>=2.9.10",
    "psycopg2-binary>=2.9.10",
    "psycopg>=3.2.4",
    "boto3>=1.36.26",
    "pandas>=2.2.3",
    "numpy>=2.2.3",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sea_gtfs_proj"]
